--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="clearfix">
         <section class="player" style="visibility: hidden">
             <div class="player-loader loader">Loading...</div>
-            <iframe id="sc-widget" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F1848538"></iframe>
+            <iframe id="sc-widget" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http://api.soundcloud.com/tracks/1848538"></iframe>
         </section>
         <section>
             <input name="search" type="text" placeholder="search Soundcloud...">
