new font; various tweaks; updated preview.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </section>
         <section>
             <input name="search" type="text" placeholder="search Soundcloud...">
-            <button class="toggle-grid-view icon clear-button">&#9783;&nbsp;toggle grid view</button>
+            <button class="btn toggle-grid-view icon clear-btn">&#9783;&nbsp;toggle grid view</button>
             <ul class="clearfix"></ul>
             <div class="pagination clearfix">
                 <i class="next" style="display: none">next</i>
