--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
     <div class="global-loader loader">Loading...</div>
     <div class="overlay"></div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="assets/js/vendor/jquery-3.1.0.min.js"></script>
     <script src="assets/js/vendor/jquery.ba-throttle-debounce.min.js"></script>
     <script src="assets/js/vendor/soundcloud/sdk-3.1.2.js"></script>
     <script src="assets/js/vendor/soundcloud/api.js"></script>
