js/css tweaks/fixes

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             <input id="search" name="search" type="text" placeholder="search Soundcloud...">
             <button class="btn btn--style-1 btn--selected toggle-grid-view" data-action="grid-view" title="Toggle Grid-View">&#9783;&nbsp;grid view</button>
             <button class="btn btn--style-1 toggle-repeat" data-action="repeat" title="Toggle Repeat">&#10608;&nbsp;repeat</button>
-            <!-- <button class="btn btn--style-1 toggle-repeat" title="Toggle Repeat">&#9854;&nbsp;toggle repeat</button> -->
             <button class="btn btn--style-1 toggle-shuffle" data-action="shuffle" title="Toggle Shuffle">&#10547;&nbsp;shuffle</button>
-            <button class="btn btn--style-1 toggle-autoplay" data-action="autoplay" title="Toggle Autoplay (disabled)">&#9738;&nbsp;autoplay</button>
+            <!-- <button class="btn btn--style-1 toggle-autoplay" data-action="autoplay" title="Toggle Autoplay (disabled)">&#9738;&nbsp;autoplay</button> -->
         </nav>
         <section>
             <ul id="list"></ul>
